--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -12,7 +12,7 @@ uwsgi = "^2.0"
 mysqlclient = "^1.4"
 
 [tool.poetry.dev-dependencies]
-
+black = {version = "^18.3-alpha.0", allows-prereleases = true}
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
