--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Decode dotenv file
+          command: echo $ENV_FILE | base64 --decode > .env
+      - run:
           name: Build Docker Image
           command: docker-compose up -d --build
       - run:
