--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,6 @@ jobs:
       - run:
           name: Run tests
           command: |
-            docker-compose exec django python manage.py migrate && \
+            docker-compose exec django python manage.py migrate
             docker-compose exec django python manage.py test
 
