--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            docker-compose exec mysql service mysql restart
-            docker-compose exec mysql mysql -uxv_rugby -pxv_rugby
+            docker-compose ps
             docker-compose exec django python manage.py migrate
             docker-compose exec django python manage.py test
 
