--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            docker-compose ps
+            docker-compose exec mysql service mysql status
             docker-compose exec django python manage.py migrate
             docker-compose exec django python manage.py test
 
