entrypoint move to Dockerfile

--- a/containers/django/Dockerfile
+++ b/containers/django/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.7
 
 ARG PROJECT_ENV
+ARG MYSQL_PORT
+ARG MYSQL_USER
+ARG MYSQL_PASSWORD
 
 ENV PROJECT_ENV=${PROJECT_ENV} \
   PYTHONFAULTHANDLER=1 \
@@ -23,3 +26,6 @@ RUN poetry config settings.virtualenvs.create false \
   && poetry install $(test "$PROJECT_ENV" == production && echo "--no-dev") --no-interaction --no-ansi
 
 COPY . /code/
+
+COPY containers/django/wait-for-mysql.sh /code/wait-for-mysql.sh
+ENTRYPOINT ["sh", "/docker-entrypoint.sh", "127.0.0.1", "$MYSQL_PORT", "$MYSQL_USER", "$MYSQL_PASSWORD"]
