--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,13 +38,13 @@ services:
     command: uwsgi --ini /code/xv_rugby/django.ini
     environment:
       - PROJECT_ENV=${PROJECT_ENV}
-      - MYSQL_PORT=${MYSQL_PORT}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - WAIT_HOSTS=mysql:${MYSQL_PORT}
     volumes:
       - ${DJANGO_SOURCE}:/code
       - ${STATIC_FILES}:/static
     expose:
       - "8001"
     depends_on:
+      - mysql
+    links:
       - mysql
